# tui-guess-the-number

./: .dockerinfo  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  volumes-to-delete.txt
.devcontainer/: devcontainer.json
src/tui-guess-the-number/: _players.py  engine.py  guess.py  logging_setup.py  player_discovery.py  players.py
